[package]
name = "rate_limit"
description = "simple rate limiter"
version = "0.1.0"
authors = ["Josh Ike <mail@chukwuanu.com>"]
edition = "2021"
readme = "../README.md"

[[bin]]
name = "rate_limit"
path = "src/main.rs"

[dependencies]
axum = "0.7.5"
axum-client-ip = "0.6.0"
chrono = "0.4.38"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
cargo-watch = "8.5.2"
rusty-hook = "0.11.2"
